--- a/src/css/test.scss
+++ b/src/css/test.scss
@@ -1,4 +1,5 @@
 @import "colors";
+@import "mixins";
 // @import "~bootstrap/scss/bootstrap";
 
 body {
@@ -11,8 +12,8 @@ body {
 .scroller{
 	position: absolute;
 	width: 1px;
-	height: 8800px;
-	background-color: pink;
+	height: 1910px;
+	background-color: transparent;
 }
 
 .intro-container{
@@ -138,26 +139,35 @@ body {
 	margin: 0;
 	padding: 0;
 
-	// left: 0;
-	// top: 0;
-	
-	// margin-left: -370%;
-	// margin-top: -340%;
-	// height: 750vmax;
+	width: 5800vw;
 
-	width: 2300vw;
-
-	// width: 2300%;
-
-	// min-height: 13880vh;
-
-	left: 550vw;
-    top: 50%;
+	left: 420vw;
+    top: 20%;
     transform: translate(-50%, -50%);
 
     // background-color: #f2f2f2;
 
-    box-shadow: 0 0 0 100vw #f2f2f2;
+    box-shadow: 0px 40vh 0 #f2f2f2,
+    			0px 60vh 0 #f2f2f2,
+    			0px -40vh 0 #f2f2f2;
+}
+
+.contact-page-bg{
+	opacity: 0;
+	position: fixed;
+	z-index: 24;
+
+	left: 50%;
+	top: 50%;
+	
+	margin-left: -50vw;
+	margin-top: -50vh;
+	width: 100vw;
+	height: 100vh;
+
+	background-color: #f2f2f2;
+
+	@include transition(all 0.2s ease-in-out);
 }
 
 
