--- a/src/css/test.scss
+++ b/src/css/test.scss
@@ -1,5 +1,6 @@
 @import "colors";
 @import "mixins";
+@import "screens";
 // @import "~bootstrap/scss/bootstrap";
 
 body {
@@ -15,6 +16,8 @@ body {
 	height: 1910px;
 	background-color: transparent;
 }
+
+
 
 .intro-container{
 	position: fixed;
@@ -42,7 +45,13 @@ body {
 
 					.model{
 						margin-bottom: -25vh;
-						width: 400px;
+						width: 25vw;
+					}
+
+					.model-small{
+						margin-left: -10vh;
+						margin-bottom: -30vh;
+						width: 40vh;
 					}
 				}
 
@@ -74,8 +83,8 @@ body {
 
 .intro-placeholder{
 	height: 1850px;
-	width: 80px;
-	background-color: green;
+	width: 1px;
+	background-color: transparent;
 }
 
 .projects-container{
@@ -90,7 +99,7 @@ body {
 			height: 12vh;
 
 				.projects-handle{
-					font-size: 5vw;
+					font-size: 5vmax;
 					top: 6.5%;
 				}
 		}
@@ -139,17 +148,19 @@ body {
 	margin: 0;
 	padding: 0;
 
-	width: 5800vw;
+	width: 6400vw;
 
 	left: 420vw;
-    top: 20%;
+    top: 22%;
     transform: translate(-50%, -50%);
 
     // background-color: #f2f2f2;
 
-    box-shadow: 0px 40vh 0 #f2f2f2,
-    			0px 60vh 0 #f2f2f2,
-    			0px -40vh 0 #f2f2f2;
+    box-shadow: 0px 20vh 0 $bg,
+    			0px 40vh 0 $bg,
+    			0px 60vh 0 $bg,
+    			0px 80vh 0 $bg,
+    			0px -20vh 0 $bg;
 }
 
 .contact-page-bg{
