--- a/src/css/test.scss
+++ b/src/css/test.scss
@@ -2,13 +2,46 @@
 @import "mixins";
 @import "screens";
 @import "typography";
+@import "projects";
+@import "contact";
 // @import "~bootstrap/scss/bootstrap";
 
 body {
 	background-color: $bg;
-	p {
-		color: red;
-	}
+
+		.carousel-cell{
+			margin: 0 !important;
+			padding: 0 !important;
+		}
+}
+
+.bg{
+	opacity: 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	@include transition(all 1s ease-in-out);
+}
+
+#green{
+	// background: linear-gradient(to left, #d9f9ea 5%, #69eaab 90%);
+	background: linear-gradient(to left, $bg 5%, #b7ffdc 90%);
+}
+
+#silver{
+	background: linear-gradient(to left, #c4daff 5%, $bg 90%);
+}
+
+#purple{
+	// background: linear-gradient(to left, #dcc9ff 5%, #b190ed 90%);
+	background: linear-gradient(to left, $bg 5%, #dcc9ff 90%);
+}
+
+#blue{
+	// background: linear-gradient(to left, #61bad8 5%, #a8ffef 90%);
+	background: linear-gradient(to left, #61bad8 5%, #a8ffef 90%);
 }
 
 .scroller{
@@ -102,6 +135,7 @@ body {
 }
 
 .projects-title{
+	z-index: 24;
 	position: fixed;
 	font-size: 15vw;
 	top: 50%;
@@ -115,62 +149,8 @@ body {
 	background-color: transparent;
 }
 
-.projects-container{
-	height: 412vh;
-	width: 100%;
-	background-color: pink;
-
-	padding: 0;
-	margin: 0;
-
-		.projects-handle-container{
-			height: 12vh;
-
-				.projects-handle{
-					font-size: 5vmax;
-					top: -4.5%;
-				}
-		}
-
-		
-		.project{
-			height: 100vh;
-			width: 100%;
-			padding: 0;
-			margin: 0;
-		}
-
-		.project-1{
-			@extend .project;
-			background-color: red;
-		}
-		
-		.project-2{
-			@extend .project;
-			background-color: green;			
-		}
-
-		.project-3{
-			@extend .project;
-			background-color: blue;			
-		}
-
-		.project-4{
-			@extend .project;
-			background-color: purple;							
-		}
-
-		.last-proj-fixed{
-			position: fixed;
-			width: 100vw !important;
-			left: 50%;
-			top: 50%;
-			margin-left: -50vw;
-			margin-top: -50vh;
-		}
-}
-
 .contact-title{
+	pointer-events: none;
 	z-index: 25;
 	position: fixed;
 	margin: 0;
@@ -192,6 +172,7 @@ body {
 }
 
 .contact-page-bg{
+	pointer-events: none;
 	opacity: 0;
 	position: fixed;
 	z-index: 24;
@@ -208,9 +189,5 @@ body {
 
 	@include transition(all 0.2s ease-in-out);
 }
-
-
-
-
 
 
