--- a/src/css/_contact.scss
+++ b/src/css/_contact.scss
@@ -70,9 +70,9 @@
 
 .btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
 	font-family: HelvLight;
-	padding: 1vw;
-	font-size: 3vw;
-	font-size:calc(24px + 1vw);
+	padding: 1vw !important;
+	font-size: 3vw !important;
+	font-size:calc(24px + 1vw) !important;
 	@include transition(0.3s all ease-in-out);
 	color: $text !important;
 	border-color: $bg !important;
@@ -80,8 +80,8 @@
 }
 
 .form-control:focus {
-  border-color: #ccc;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+	border-color: #ccc !important;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6) !important;
 }
 
 .btn-primary:hover, .btn-primary:active{
