--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -70,12 +70,21 @@ body {
 			align-items: center;
 			justify-content: center;
 			
-				.small-intro-text{
+				.intro-text{
 					display: block;
 					text-align: left;
 					right: 12%;
 
 					font-size: 5vw;
+					opacity: 0;
+					transform: translateX(10%);
+					@include transition(all 0.5s ease-in-out);
+					
+				}
+
+				.loaded{
+					opacity: 1 !important;
+					transform: translateX(0);
 				}
 		}
 }
@@ -107,13 +116,29 @@ body {
 					.model{
 						margin-bottom: -25vh;
 						width: 25vw;
+
+						opacity: 0;
+						transform: translateX(-10%);
+							
 					}
 
 					.model-small{
 						margin-left: -10vh;
 						margin-bottom: -30vh;
 						width: 40vh;
+
+						opacity: 0;
+						transform: translateX(-10%);
 					}
+					.unloaded-model{
+						@include transition(all 0.5s ease-in-out);
+					}
+
+					.loaded{
+						opacity: 1 !important;
+						transform: translateX(0);
+					}
+
 				}
 
 				#intro-text-container{
@@ -130,7 +155,19 @@ body {
 							position: relative;
 
 							font-size: 5vw;
+
+							opacity: 0;
+							transform: translateX(10%);
+							@include transition(all 0.5s ease-in-out);
+
+							
 						}
+
+						.loaded{
+							opacity: 1 !important;
+							transform: translateX(0);
+						}
+
 				}
 		}
 }
