--- a/src/css/_contact.scss
+++ b/src/css/_contact.scss
@@ -1,4 +1,4 @@
-.contact-form-container{
+.desktop{
 	position: fixed;
 
 	z-index: 26;
@@ -8,6 +8,10 @@
 	
 	margin-left: -50vw;
 	margin-top: 50vh;
+}
+
+.contact-form-container{
+
 	width: 100vw;
 	height: 100vh;
 
